Adding master cdr
-master file finalizes .cur cdr files into .csv
-finalization adds entry to master cdr csv file
-master file entry includes filenames, start/stop times, number
of entries, and MD5 sum
-finalization occurs at program start and end

Change-Id: I143a0bd2ba86f790e3a277c268be7a7fd82678fa

--- a/dp/Makefile
+++ b/dp/Makefile
@@ -31,6 +31,7 @@ APP = ngic_dataplane
 SRCS-y := main.c\
 	pkt_handler.c\
 	cdr.c\
+	master_cdr.c\
 	session_cdr.c\
 	config.c\
 	init.c\
@@ -170,7 +171,7 @@ LDFLAGS += -L$(RTE_SRCDIR)/../lib/libsponsdn/libsponsdn/x86_64-native-linuxapp-g
 
 LDFLAGS += -L$(HYPERSCANDIR)/build/lib
 
-LDFLAGS += -lexpressionutil -lhs -lhs_runtime -lstdc++ -lm
+LDFLAGS += -lexpressionutil -lhs -lhs_runtime -lstdc++ -lm -lcrypto
 
 LDFLAGS += -lrte_pmd_af_packet
 
