--- a/config/interface.cfg
+++ b/config/interface.cfg
@@ -13,16 +13,37 @@
 ; limitations under the License.
 
 [0]
+; please refer to INSTALL.MD for complete description of these parameters
 zmq_protocol = tcp
+
+; zmq publisher and subscriber ip:port. To be configured to an available ip
+; on the FPC Host. The port values are defined by the FPC Project.
+; These values are unused when DSDN_ODL_BUILD CFLAG not defined in
+; ng-core_cfg.mk
 zmq_sub_ip = 127.0.0.1
 zmq_sub_port = 5560
 zmq_pub_ip = 127.0.0.1
 zmq_pub_port = 5559
+
+; DP and CP communication ip:port: To be configured to available ip:ports on
+; the DP and CP Hosts respectively. Used for messages to communicate over UDP
+; including table creation, table entries; and when DSDN_ODL_BUILD CFLAG is NOT
+; defined, session establishment, modification, deletion, etc.
 dp_comm_ip = 127.0.0.1
 dp_comm_port = 20
 cp_comm_ip = 127.0.0.1
 cp_comm_port = 21
+
+; FPC ip:port: To be configured to an available IP of FPC host. The fpc_port
+; is defined by the FPC project.
+; These values are unused when DSDN_ODL_BUILD CFLAG not defined in
+; ng-core_cfg.mk
 fpc_ip = 127.0.0.1
 fpc_port = 8181
+
+; The CP Northbound server ip:port: May be configured to any available ip:port
+; on the CP Host.
+; These values are unused when DSDN_ODL_BUILD CFLAG not defined in
+; ng-core_cfg.mk
 cp_nb_server_ip = 127.0.0.1
 cp_nb_server_port = 9997
