CP NB SSE Implementation
-adding S11 pcap for testing

Change-Id: Ie8f9b61b31bc4c34f29d9171fda7403d18ccb272

--- a/config/interface.cfg
+++ b/config/interface.cfg
@@ -39,11 +39,12 @@ cp_comm_port = 21
 ; These values are unused when DSDN_ODL_BUILD CFLAG not defined in
 ; ng-core_cfg.mk
 fpc_ip = 127.0.0.1
-fpc_port = 8181
+fpc_port = 8070
+fpc_topology_port = 8181
 
 ; The CP Northbound server ip:port: May be configured to any available ip:port
 ; on the CP Host.
 ; These values are unused when DSDN_ODL_BUILD CFLAG not defined in
 ; ng-core_cfg.mk
-cp_nb_server_ip = 127.0.0.1
-cp_nb_server_port = 9997
+cp_nb_ip = 127.0.0.1
+cp_nb_port = 9997
