Updated SDF and APN meter to read metering params from meter  profile index (config/meter_profile.cfg) and other related minor changes.
 - Added meter profile index for static adc rules

 - Added params AMBR/MBR meter profile index for rules

 - Added QoS parameters structure for DP rules

 - Enabled SDF and APN meter cflags by default.

 - Added support to export meter stats

Change-Id: If919c14bbdedb852ffa6d8ede1f4fd3d36a35903
Signed-off-by: Joy Pullokaran <joy.pullokaran@intel.com>

--- a/config/static_pcc.cfg
+++ b/config/static_pcc.cfg
@@ -1,15 +1,19 @@
 [GLOBAL]
 NUM_PACKET_FILTERS = 4
+;To config AMBR/MBR values refer meter_profile.cfg. specify only the
+;meter profile index to be set here.
+UL_AMBR_MTR_PROFILE_IDX = 3
+DL_AMBR_MTR_PROFILE_IDX = 4
 
 ;default filter - must be first for now (until DP doesn't install any filters)
 [PACKET_FILTER_0]
 RATING_GROUP = 9
-;Max Bit Rate (MBR) unit= bps
-MBR = 512000
+;Specify the meter profile index from meter_profile.cfg
+UL_MBR_MTR_PROFILE_IDX = 7
+DL_MBR_MTR_PROFILE_IDX = 7
 
 [PACKET_FILTER_1]
 RATING_GROUP = 5
-MBR = 1000000
 DIRECTION = bidirectional
 PRECEDENCE = 255
 IPV4_REMOTE = 13.1.0.0
@@ -17,10 +21,11 @@ IPV4_REMOTE_MASK = 255.255.0.0
 PROTOCOL = 17
 REMOTE_LOW_LIMIT_PORT = 5060
 REMOTE_HIGH_LIMIT_PORT = 5060
+UL_MBR_MTR_PROFILE_IDX = 5
+DL_MBR_MTR_PROFILE_IDX = 5
 
 [PACKET_FILTER_2]
 RATING_GROUP = 1
-MBR = 2000000
 DIRECTION = bidirectional
 PRECEDENCE = 255
 IPV4_REMOTE = 13.1.0.0
@@ -28,15 +33,16 @@ IPV4_REMOTE_MASK = 255.255.0.0
 PROTOCOL = 17
 LOCAL_LOW_LIMIT_PORT = 17000
 LOCAL_HIGH_LIMIT_PORT = 17010
+UL_MBR_MTR_PROFILE_IDX = 6
+DL_MBR_MTR_PROFILE_IDX = 6
 
 [PACKET_FILTER_3]
 RATING_GROUP = 7
-MBR = 4000000
 DIRECTION = bidirectional
 PRECEDENCE = 255
 IPV4_REMOTE = 13.1.0.0
-IPV4_REMOTE_MASK = 255.255.0.0
 PROTOCOL = 17
 LOCAL_LOW_LIMIT_PORT = 8000
 LOCAL_HIGH_LIMIT_PORT = 8080
-
+UL_MBR_MTR_PROFILE_IDX = 5
+DL_MBR_MTR_PROFILE_IDX = 5
