--- a/config/adc_rules.cfg
+++ b/config/adc_rules.cfg
@@ -1,11 +1,12 @@
 #Format  -
-#[ IP | IP Prefix | domain ] DROP? Sponsor-ID Service-ID Rate-Group? [Tariff-Group Tariff-Time]?
+#[ IP | IP Prefix | domain ] DROP? Sponsor-ID Service-ID [Meter profile index] Rate-Group? [Tariff-Group Tariff-Time]?
 # Note: it is possible that ADC rules have conflicts & in that case rules are applied by line number...
 # Rules defined first have a higher priority, unless DROP is specified (i.e. multiple rules for the same IP
 # When specifying DROP with an IP address, use a prefix of 32 to prevent DNS results from overwriting rule
+# Set Meter profile index to 0 to skip the metering
 
-13.1.1.111 Example Internet Zero-Rate
-13.1.1.112/24 Example Management Zero-Rate
-13.1.1.113 Example Provisioning Zero-Rate
-www.example.gov Example Internet Zero-Rate
-www.drop_example.com DROP Example CIPA
+13.1.1.111 Example Internet 7 Zero-Rate
+13.1.1.112/24 Example Management 7 Zero-Rate
+13.1.1.113 Example Provisioning 7 Zero-Rate
+www.example.gov Example Internet 7 Zero-Rate
+www.drop_example.com DROP Example CIPA 0
