Fix to pass ng4t test for CP --> DP communication over the UDP.
config/meter_profile.cfg
-- Increase CIR values in meter tables to allow large traffic expected in
   ng4t test.
---------------------------------------------------------------

Unit Test :
-- Tested ng4t test with 25 subscribers with UDP communication.
   (SDN_ODL_BUILD flag is disable)
---------------------------------------------------------------

Test Result :
---------------------------------------------------------------
Signaling Table
       AttUE     ActCTXT   BrReq     BrAct     RelRq     RelAc     ActS1
ran9_1 0         0         25        25        0         0         80

User Plane Downlink Table
       AS_PktTx      AS_EthTx      S1uEthRx      S1uPktRx
ran9_1 35,410        35,410        35,410        35,410

User Plane Uplink Table
       S1uPktTx      S1uEthTx      AS_EthRx      AS_PktRx
ran9_1 13,085        13,273        13,085        13,085

Watchtime: 75 Timeout: 1800
All Tests are finished
Verdict(tc_userplane_load) = VERDICT_PASS
**** Packet Loss ****
DL Loss= AS_PktTx-S1uPktRx=     0(pkts); 0.00(%)
UL Loss= S1uPktTx-AS_PktRx=     0(pkts); 0.00(%)
Wait for RAN shutdown
done
Testlist verdict = VERDICT_PASS
----------------------------------------------------------------

Change-Id: I70e41e684a425efe941f5531ae0ff054eb2015dc

--- a/config/meter_profile.cfg
+++ b/config/meter_profile.cfg
@@ -23,35 +23,35 @@ MTR_PROFILE_IDX = 4
 
 [ENTRY_3]
 ; QCI5,QCI7 15.571kbps = 1947 B
-CIR = 1947
+CIR = 2342400
 CBS = 5856
 EBS = 11712
 MTR_PROFILE_IDX = 5
 
 [ENTRY_4]
 ; QCI1, 44kbps = 5500 B
-CIR = 5500
+CIR = 2342400
 CBS = 5856
 EBS = 11712
 MTR_PROFILE_IDX = 6
 
 [ENTRY_5]
 ; QCI9, 31.143kbps = 3893 B
-CIR = 2928
+CIR = 2342400
 CBS = 5856
 EBS = 11712
 MTR_PROFILE_IDX = 7
 
 [ENTRY_6]
 ; 128B, 7pps
-CIR = 896
+CIR = 2342400
 CBS = 512
 EBS = 1024
 MTR_PROFILE_IDX = 8
 
 [ENTRY_7]
 ; 128B, 2pps
-CIR = 256
+CIR = 2342400
 CBS = 512
 EBS = 1024
 MTR_PROFILE_IDX = 9
