Make CP test rules files (*.cfg) uniform with those of the FPC test rules format.
	./config/adc_rules.cfg :
		- Re-structure ADC rules config file

	./config/pcc_rules.cfg :
		- Added new PCC rules config file

	./config/sdf_rules.cfg :
		- Added new SDF rules config file

	- Delete static_pcc.cfg file

	./cp/packet_filter.h
	./cp/packet_filter.c :
		- Modification to handle new config structure.

	Reference on FPC :
https://github.com/sprintlabs/fpc/commit/a915f49048d2a8a53d30cf8416c2a1fc6548bdab

Unit Test :
	- End to end testing of ng4t traffic with CP --> DP communication
	over the UDP.

	- Basic validation of input parameters and DP results.

Test Result :

Signaling Table
       AttUE     ActCTXT   BrReq     BrAct     RelRq     RelAc     ActS1
ran9_1 0         0         25        25        0         0         80

User Plane Downlink Table
       AS_PktTx      AS_EthTx      S1uEthRx      S1uPktRx
ran9_1 35,410        35,410        35,410        35,410

User Plane Uplink Table
       S1uPktTx      S1uEthTx      AS_EthRx      AS_PktRx
ran9_1 13,085        13,272        13,085        13,085

Watchtime: 75 Timeout: 1800
All Tests are finished
Verdict(tc_userplane_load) = VERDICT_PASS
**** Packet Loss ****
DL Loss= AS_PktTx-S1uPktRx=     0(pkts); 0.00(%)
UL Loss= S1uPktTx-AS_PktRx=     0(pkts); 0.00(%)
Wait for RAN shutdown
done
Testlist verdict = VERDICT_PASS

Change-Id: I0bc34a595458aac56098d077655997ea91ee9456

--- a/config/sdf_rules.cfg
+++ b/config/sdf_rules.cfg
@@ -1,18 +1,18 @@
 [GLOBAL]
-NUM_PACKET_FILTERS = 4
+NUM_SDF_FILTERS = 3
 ;To config AMBR/MBR values refer meter_profile.cfg. specify only the
 ;meter profile index to be set here.
 UL_AMBR_MTR_PROFILE_IDX = 3
 DL_AMBR_MTR_PROFILE_IDX = 4
 
 ;default filter - must be first for now (until DP doesn't install any filters)
-[PACKET_FILTER_0]
+[SDF_FILTER_0]
 RATING_GROUP = 9
 ;Specify the meter profile index from meter_profile.cfg
 UL_MBR_MTR_PROFILE_IDX = 7
 DL_MBR_MTR_PROFILE_IDX = 7
 
-[PACKET_FILTER_1]
+[SDF_FILTER_1]
 RATING_GROUP = 5
 DIRECTION = bidirectional
 PRECEDENCE = 255
@@ -24,7 +24,7 @@ REMOTE_HIGH_LIMIT_PORT = 5060
 UL_MBR_MTR_PROFILE_IDX = 5
 DL_MBR_MTR_PROFILE_IDX = 5
 
-[PACKET_FILTER_2]
+[SDF_FILTER_2]
 RATING_GROUP = 1
 DIRECTION = bidirectional
 PRECEDENCE = 255
@@ -36,7 +36,7 @@ LOCAL_HIGH_LIMIT_PORT = 17010
 UL_MBR_MTR_PROFILE_IDX = 6
 DL_MBR_MTR_PROFILE_IDX = 6
 
-[PACKET_FILTER_3]
+[SDF_FILTER_3]
 RATING_GROUP = 7
 DIRECTION = bidirectional
 PRECEDENCE = 255
