--- a/config/adc_rules.cfg
+++ b/config/adc_rules.cfg
@@ -1,12 +1,85 @@
-#Format  -
-#[ IP | IP Prefix | domain ] DROP? Sponsor-ID Service-ID [Meter profile index] Rate-Group? [Tariff-Group Tariff-Time]?
-# Note: it is possible that ADC rules have conflicts & in that case rules are applied by line number...
-# Rules defined first have a higher priority, unless DROP is specified (i.e. multiple rules for the same IP
-# When specifying DROP with an IP address, use a prefix of 32 to prevent DNS results from overwriting rule
-# Set Meter profile index to 0 to skip the metering
+[GLOBAL]
+NUM_ADC_RULES = 5
 
-13.1.1.111 Example Internet 7 Zero-Rate
-13.1.1.112/24 Example Management 7 Zero-Rate
-13.1.1.113 Example Provisioning 7 Zero-Rate
-www.example.gov Example Internet 7 Zero-Rate
-www.drop_example.com DROP Example CIPA 0
+;FORMAT ::
+;ADC_TYPE : [ DOMAIN = 0 | IP = 1 | IP PREFIX =2 ]
+;
+;if ADC_TYPE = 0
+;	DOMAIN
+;elseif ADC_TYPE = 1
+;	IP
+;elseif ADC_TYPE = 2
+;	IP
+;	PREFIX
+;else
+;	NONE
+;
+;GATE_STATUS : DROP [ 0 if DROP, 1 otherwise ]
+;RATING_GROUP
+;SERVICE_ID
+;PRECEDENCE = 0x1ffffffe(536870910) - default value
+;MTR_PROFILE_INDEX
+;SPONSOR_ID
+;TARIFF_GROUP
+;TARIFF_TIME
+;
+;NOTE :
+;Rules defined first have a higher priority, unless DROP is specified
+;(i.e. multiple rules for the same IP).
+;
+;Set Meter profile index to 0 to skip the metering.
+;
+;When specifying DROP with an IP address, use a prefix of 32 to prevent DNS
+;results from overwriting rule.
+
+[ADC_RULE_0]
+ADC_TYPE = 1
+IP = 13.1.1.111
+GATE_STATUS = 1
+RATING_GROUP = Zero-Rate
+SERVICE_ID = Internet
+PRECEDENCE = 536870910
+MTR_PROFILE_INDEX = 7
+SPONSOR = Example
+
+[ADC_RULE_1]
+ADC_TYPE = 2
+IP = 13.1.1.112
+PREFIX = 24
+GATE_STATUS = 1
+RATING_GROUP = Zero-Rate
+SERVICE_ID = Management
+PRECEDENCE = 536870910
+MTR_PROFILE_INDEX = 7
+SPONSOR = Example
+
+[ADC_RULE_2]
+ADC_TYPE = 1
+IP = 13.1.1.113
+GATE_STATUS = 1
+RATING_GROUP = Zero-Rate
+SERVICE_ID = Provisioning
+PRECEDENCE = 536870910
+MTR_PROFILE_INDEX = 7
+SPONSOR = Example
+
+[ADC_RULE_3]
+ADC_TYPE = 0
+DOMAIN = www.example.gov
+GATE_STATUS = 1
+RATING_GROUP = Zero-Rate
+SERVICE_ID = Internet
+PRECEDENCE = 536870910
+MTR_PROFILE_INDEX = 7
+SPONSOR = Example
+
+[ADC_RULE_4]
+ADC_TYPE = 0
+DOMAIN = www.drop_example.com
+GATE_STATUS = 0
+RATING_GROUP = 0
+SERVICE_ID = CIPA
+PRECEDENCE = 536870910
+MTR_PROFILE_INDEX = 0
+SPONSOR = Example
+
