Changes to handle S11u(ciot) messages in create session request/response.
Handling of S11u create session request/response. Changes in ftied to
communiocate with MME for S11u sessions.

Made numa flag runtime configurable through cmd line argument instead hard
coding.

Unit tests:
- Tested S1u And S11u traffic generation with ng4t.
- Tested on virtual machines setup, and tested on collocated CP DP setup on
  normal host(bare metal)

Test result:
Signaling Table
        AttUE     ActCTXT   BrReq     BrAct     RelRq     RelAc     ActS1
ran15_1 0         0         1         1         0         0         80

User Plane Downlink Table
        AS_PktTx      AS_EthTx      S1u/S11uEthRx S1uPktRx
ran15_1 100           100           0             100
mme1                                100

User Plane Uplink Table
        S1uPktTx      S1u/S11uEthTx AS_EthRx      AS_PktRx
ran15_1 35            0             35            35
mme1                  38

Watchtime: 25 Timeout: 1800
All Tests are finished
Verdict(tc_attach_data_nbiot) = VERDICT_PASS
**** Packet Loss ****
DL Loss= AS_PktTx-S1uPktRx=     0(pkts); 0.00(%)
UL Loss= S1uPktTx-AS_PktRx=     0(pkts); 0.00(%)
Wait for RAN shutdown
done

Change-Id: I98473a2e2b1e4656bfbeebfe16faa495ae9b33a6

--- a/config/dp_config.cfg
+++ b/config/dp_config.cfg
@@ -12,6 +12,8 @@ SGI_MAC=3c:fd:fe:9f:36:78
 NUM_WORKER=1
 MEMORY=4096
 
+#Set 1 to enabled numa, otherwise set to 0
+NUMA=1
 
 #Optional:
 #SGI_GW_IP=13.1.1.110
