Adding S5S8 support and table restructuring
1. S5S8 support
	Adding s5s8 support for sgw to pgw,
	Configuration support to run cp as sgwc, pgwc and spgwc
	Confuguration support to run dp as sgwu, pgwu and spgwu
	Synchrounous CS, DS request handling for s5s8
	Packet handler restructured in DP for SGU, PGWU and SPGWU

2. Tables restructuring
	ADC, PCC and SDF tables restructured for modularity, scaling
	and right way for rules handling.
	Table relations and integration implemented.
	Table structure made simialr to FPC test rules.

3. Static ARP
	Feature to read ARP entries from config file for the servers
	which cannot be directly resolved dynamically.

4. Packet capture feature in DP
	In DP packet capture functionality added to take packet dump.
	Feature can be enabled at compile time.

Test result-1:: For S5S8 as mentioned below
----------------------------------
CP1 --> SGWC and CP2 --> PGWC
DP1 --> SGWU and DP2 --> PGWU
----------------------------------

Signaling Table
        AttUE     ActCTXT   BrReq     BrAct     RelRq     RelAc     ActS1
ran15_1 0         0         500,000   500,000   0         0         80

User Plane Downlink Table
        AS_PktTx      AS_EthTx      S1uEthRx      S1uPktRx
ran15_1 200,000       200,000       200,000       200,000

User Plane Uplink Table
        S1uPktTx      S1uEthTx      AS_EthRx      AS_PktRx
ran15_1 200,000       208,760       200,000       200,000

Watchtime: 1095 Timeout: 1800
All Tests are finished
Verdict(tc_userplane_load) = VERDICT_PASS
**** Packet Loss ****
DL Loss= AS_PktTx-S1uPktRx=     0(pkts); 0.00(%)
UL Loss= S1uPktTx-AS_PktRx=     0(pkts); 0.00(%)
Wait for RAN shutdown
done
Testlist verdict = VERDICT_PASS

Test result-2:: SPGW
-------------------------
CP1 --> SPGWC
DP1 --> SPGWU
-------------------------

Signaling Table
        AttUE     ActCTXT   BrReq     BrAct     RelRq     RelAc     ActS1
ran15_1 0         0         500,000   500,000   0         0         80

User Plane Downlink Table
        AS_PktT

--- a/cp/Makefile
+++ b/cp/Makefile
@@ -40,8 +40,10 @@ SRCS-y += packet_filters.c
 SRCS-y += gtpv2c_messages/bearer_resource_cmd.o
 SRCS-y += gtpv2c_messages/create_bearer.o
 SRCS-y += gtpv2c_messages/create_session.o
+SRCS-y += gtpv2c_messages/create_s5s8_session.o
 SRCS-y += gtpv2c_messages/delete_bearer.o
 SRCS-y += gtpv2c_messages/delete_session.o
+SRCS-y += gtpv2c_messages/delete_s5s8_session.o
 SRCS-y += gtpv2c_messages/echo.o
 SRCS-y += gtpv2c_messages/modify_bearer.o
 SRCS-y += gtpv2c_messages/downlink_data_notification.o
@@ -74,8 +76,13 @@ ifneq (,$(findstring SDN_ODL_BUILD, $(CFLAGS)))
 	LDLIBS += -ljson-c
 	LDLIBS += -lcurl
 endif
+
+#Enable '-E' option to debug preprocessor output
+#CFLAGS += -E
+
+#Enable'-g -O0' option for gdb
 CFLAGS += -O3
-#CFLAGS += -O0
+#CFLAGS += -g -O0
 
 CFLAGS += $(WERROR_FLAGS)
 CFLAGS_config.o := -D_GNU_SOURCE
