--- a/config/dp_config.cfg
+++ b/config/dp_config.cfg
@@ -3,11 +3,39 @@ FILE="logs/dp_$NOW.log"
 PORT0=0000:83:00.0
 PORT1=0000:81:00.0
 
-S1U_IP=11.1.1.100
-S1U_MAC=3c:fd:fe:a0:14:30
+#dp configure parameter selections
+#SPGW_CFG:: SGWU=01; PGWU=02; SPGWU=03
+#
+#Example configurations as per selected SPGW_CFG is given below.
+#Uncomment the section of parameters based on PGW_CFG configuration:
+#
+#####[SGWU]#####
+#SPGW_CFG=01
+#S1U_PORT=0000:00:08.0
+#S5S8_SGWU_PORT=0000:00:09.0
+#S1U_IP=11.3.1.93
+#S1U_MAC=00:00:00:00:fe:00
+#S5S8_SGWU_IP=12.3.1.93
+#S5S8_SGWU_MAC=00:00:00:00:fe:01
 
-SGI_IP=13.1.1.93
-SGI_MAC=3c:fd:fe:9f:36:78
+#####[PGWU]#####
+#SPGW_CFG=02
+#S5S8_PGWU_PORT=0000:00:08.0
+#SGI_PORT=0000:00:09.0
+#S5S8_PGWU_IP=11.3.1.93
+#S5S8_PGWU_MAC=00:00:00:00:fe:00
+#SGI_IP=13.3.1.93
+#SGI_MAC=00:00:00:00:fe:01
+
+
+#####[SPGWU]#####
+SPGW_CFG=03
+S1U_PORT=0000:00:08.0
+SGI_PORT=0000:00:09.0
+S1U_IP=11.3.1.93
+S1U_MAC=00:00:00:00:fe:00
+SGI_IP=13.3.1.93
+SGI_MAC=00:00:00:00:fe:01
 
 NUM_WORKER=1
 MEMORY=4096
