Extended CDR support and regular CDR updates.
1.	New build time flag introduced to generated extended CDR.
	This CDR will generate detailed record of the traffic passed through data plane.
	File name will be with prefix “extended_cdr_” By default this flag is disabled.
2.	Updates in CDR file for ul, dl entries, filter type.
3.	Adding back name_to_num function for rating group and service id.
4.	Added fix for precedence into DP to handled mutltiple ADC and SDF rules.
5.	Fix for handled SDF direction parameter.
6.	Added fix for handling single ADC/SDF rule for perticular UE/APP IP.
7.	Updates the rule cfg files and rule are started from index 1.

Unit tests:
1.	Sanity with 25 UEs.
2.	Testing with and without extended CDR flag.

Test Result :
Signaling Table
       AttUE     ActCTXT   BrReq     BrAct     RelRq     RelAc     ActS1
ran9_1 0         0         25        25        0         0         80

User Plane Downlink Table
       AS_PktTx      AS_EthTx      S1uEthRx      S1uPktRx
ran9_1 35,410        35,410        35,410        35,410

User Plane Uplink Table
       S1uPktTx      S1uEthTx      AS_EthRx      AS_PktRx
ran9_1 13,085        13,273        13,085        13,085

Watchtime: 75 Timeout: 1800
All Tests are finished
Verdict(tc_userplane_load) = VERDICT_PASS
**** Packet Loss ****
DL Loss= AS_PktTx-S1uPktRx=     0(pkts); 0.00(%)
UL Loss= S1uPktTx-AS_PktRx=     0(pkts); 0.00(%)
Wait for RAN shutdown
done
Testlist verdict = VERDICT_PASS
lte1@ran9:~/nfv-ran-ng40/test$

Change-Id: I1567dacafdb41bdffdfaacf331ba70d17054c77a

--- a/dp/Makefile
+++ b/dp/Makefile
@@ -48,6 +48,7 @@ SRCS-y := main.c\
 	commands.c\
 	stats.c\
 	ddn_utils.c\
+	extended_cdr.c\
 	pipeline/epc_load_balance.o\
 	pipeline/epc_packet_framework.o\
 	pipeline/epc_tx.o\
@@ -169,6 +170,10 @@ CFLAGS += -DSTATIC_ARP
 
 #un-comment below line to generate pcap on east-west interfaces
 #CFLAGS += -DPCAP_GEN
+
+#un-comment below line to generate extended CDR file.
+#Note: This will impact data traffic performance.
+#CFLAGS += -DEXTENDED_CDR
 
 CFLAGS += -Werror
 CFLAGS += -Wunused-variable
